# localmoney

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  optimize.sh  package-lock.json  package.json
app/: .env.sample  .eslintrc  .gitignore  .prettierrc.json  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/locales/: en.yml  es.yml  pt-BR.yml
app/public/: favicon.ico:Zone.Identifier
app/public/data/: makers.json
app/src/: App.vue  auto-imports.d.ts  components.d.ts  index.d.ts  main.ts  routes.ts  shared.js  window.d.ts
app/src/analytics/: analytics.ts
app/src/config/: beta.ts  featureToggle.ts  makers.json
app/test/: tradeFlow.spec.js  tradeFlow.spec.ts
app/tests/: README.md  arbitration.spec.ts  configs.ts  fees.spec.ts  helper.ts  hub.spec.ts  pagination.spec.ts  price.spec.ts  sequencer.js  setup.spec.ts  trade.spec.ts  tradeFlow.spec.ts  utils.ts
artifacts/: checksums_intermediate.txt  offer.wasm
contracts/: .gitignore  README.md  all.sh  optimize.sh
contracts/contracts/offer/: Cargo.toml
contracts/contracts/offer/src/: contract.rs  lib.rs  mock_querier.rs  state.rs  tests.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/fee-collector/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/governance/artifacts/: trade.wasm
contracts/governance/src/: contract.rs  errors.rs  integration_test.rs  lib.rs  mock_querier.rs  msg.rs  state.rs  tests.rs
contracts/offer/: Cargo.toml
contracts/trade/: Cargo.toml
contracts/trading_incentives/: Cargo.toml
deploy/: .gitignore  README.md  findFilesInDir.js  index.js  package.json
fixtures/: fixtures.js
integration-tests/: index.js  package.json
lib/: executeMsg.js  fundTradeEscrow.js  getFactoryCfg.js  loadCachedFactory.js  refundTradeEscrow.js
modules/contracts/: optimize.sh
modules/testsuite/: package-lock.json  package.json
modules/vue-front/: deploy-frontend-only.sh  deploy-with-new-contracts.sh  deploy.sh  package-lock.json  package.json
src/: App.vue  constants.js  shared.js
src/components/: CollapsedOffer.vue  CreateOffer.vue  CurrencyInput.vue  ExpandedOffer.vue  Header.vue  Home.vue  HomeHero.vue  ListOffers.vue  Nav.vue  NavDesktop.vue  NavMobile.vue  Offer.vue  Offers.vue  Trade.vue
src/pages/: Home.vue  Offers.vue  TradeDetail.vue  Trades.vue
src/router/: index.js
src/store/: index.js
src/style/: elements.scss  header.scss  offers.scss  pages.scss  reset.scss  tokens.scss
test/: queryInterfaces.spec.js
testsuite/: .gitignore  .mocharc.yml  .terrarium.env  jsconfig.json  package-lock.json  package.json
testsuite/cache/: .gitignore  codeIds_bombay.json  factory_bombay.json
testsuite/lib/: _getAttribute.js  _readCachedCodeIds.js  _readCachedContractChecksums.js  _readNewContractChecksums.js  _writeCachedContractChecksums.js  claimStaking.js  createArbitrator.js  createFeeGrant.js  createLCDClient.js  createOffer.js  createTrade.js  createUser.js  deleteArbitrator.js  deploy.js  enterStaking.js  executeMsgPaidByFeeGrant.js  fundTradeEscrow.js  getFactoryCfg.js  instantiateFactory.js  queryClaims.js  queryFactoryCfg.js  queryStakingTotals.js  queryTrades.js  releaseTradeEscrow.js  revokeFeeGrant.js  updateOffer.js
testsuite/scripts/: git-commit.sh
testsuite/test/: arbitrationInterface.spec.js  cryptolessTaker.spec.js  disputeResolution.spec.js  queryInterfaces.spec.js  staking.spec.js  tradeFlow.spec.js
vue-front/: .gitignore  .prettierrc  README.md  package-lock.json  package.json
vue-front/public/: index.html
vue-front/scripts/: deploy-contracts.sh  deploy-frontend.sh
vue-front/src/: App.vue  main.js
(+307 files in other folders)
