[package]
name = "governance"
version = "0.0.0"
authors = ["Samuel Barbosa <sambarbosaa@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
thiserror = "1.0.25"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
terra-cosmwasm = { version = "2.2.0" }
offer = { path = "../offer" }
terraswap = { git = "https://github.com/terraswap/terraswap", branch = "main" }
localterra-protocol = { path = "../../packages/protocol" }
cw20 = { version = "0.8.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-vm = { version = "0.16.0" }
