[package]
name = "offer"
version = "0.0.0"
authors = ["localmoney devs"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
thiserror = "1.0.25"
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
localmoney-protocol = { path = "../../packages/protocol" }
cw2 = { version = "0.13.1" }
cw20 = { version = "0.13.1" }
cw20-base = { version = "0.13.1" }
cw-storage-plus = { version = "0.13.1", features = ["iterator"] }
rand = "0.7"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-vm = { version = "1.0.0" }
